--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ baseurl:
 url: zhuzelei.github.io
 date_format: "ordinal"
 title: zzl Blog
-subtitle: 
+subtitle: 菜鸡发表胡言乱语之地
 description: 菜鸡发表胡言乱语之地
 keywords: 
 timezone: Asia/Shanghai
